tests/samples/block-undefined/error.full.txt
Unknown block name "lorem" on line 2 at index 3.

1|// error: lorem
2|{@lorem}
    ^
3|    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.

File: /mnt/Emile/silassare/blate/src/Exceptions/Traits/BlateExceptionTrait.php
Line: 56
#0 /mnt/Emile/silassare/blate/src/Parser.php(152): Blate\Exceptions\BlateRuntimeException::withToken()
#1 /mnt/Emile/silassare/blate/src/Parser.php(86): Blate\Parser->blockOpen()
#2 /mnt/Emile/silassare/blate/src/Blate.php(143): Blate\Parser->parse()
#3 /mnt/Emile/silassare/blate/tests/TemplateSyntaxTest.php(261): Blate\Blate->parse()
#4 /mnt/Emile/silassare/blate/tests/TemplateSyntaxTest.php(63): Blate\Tests\TemplateSyntaxTest->runInvalid()
#5 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(1545): Blate\Tests\TemplateSyntaxTest->testBlockUndefined()
#6 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(1151): PHPUnit\Framework\TestCase->runTest()
#7 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestResult.php(726): PHPUnit\Framework\TestCase->runBare()
#8 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(903): PHPUnit\Framework\TestResult->run()
#9 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(677): PHPUnit\Framework\TestCase->run()
#10 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(677): PHPUnit\Framework\TestSuite->run()
#11 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(677): PHPUnit\Framework\TestSuite->run()
#12 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/TestRunner.php(673): PHPUnit\Framework\TestSuite->run()
#13 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/Command.php(143): PHPUnit\TextUI\TestRunner->run()
#14 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/Command.php(96): PHPUnit\TextUI\Command->run()
#15 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/phpunit(98): PHPUnit\TextUI\Command::main()
#16 {main}